Projeto versão: alpha 0.1.3
Criei o crud para o autor e suas validações e alterei o banco de dados pra funcionar