@@ -1,23 +1,24 @@
 package project.service;
 
 import jakarta.transaction.Transactional;
+import org.springframework.stereotype.Service;
 import project.entity.Book;
 import project.repository.BookRepository;
 
 import java.time.LocalDate;
 import java.util.List;
 
-@org.springframework.stereotype.Service
+@Service
 public class BookService {
-    private final BookRepository bookRepository;
+    private final BookRepository repository;
 
-    public BookService(BookRepository bookRepository) {
-        this.bookRepository = bookRepository;
+    public BookService(BookRepository repository) {
+        this.repository = repository;
     }
 
     public Book create(Book book){
         try {
-            if(book.getBook_title() != null && !book.getBook_title().trim().isEmpty()){
+            if(book.getBook_title() != null && !book.getBook_title().trim().isBlank()){
                 book.setBook_title(book.getBook_title().trim());
             }
             if(book.getBook_rating() != null && (book.getBook_rating() >= 5 || book.getBook_rating() >= 0)){
@@ -29,31 +30,30 @@ public class BookService {
             if(book.getBook_date_published() != null && !book.getBook_date_published().isAfter(LocalDate.now())){
                 book.setBook_date_published(book.getBook_date_published());
             }
-
-            return bookRepository.save(book);
+            if(book.getBook_description() != null && !book.getBook_description().trim().isBlank()){
+                book.setBook_description(book.getBook_description().trim());
+            }
+            return repository.save(book);
         } catch (RuntimeException e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException(e.getMessage());
         }
     }
 
-    public List<Book> listAll(){
+    public List<Book> list_all(){
         try {
-            if(bookRepository.findAll().isEmpty()){
-                throw new RuntimeException();
-            }
-            return bookRepository.findAll();
+            return repository.findAll();
         } catch (RuntimeException e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException(e.getMessage());
         }
     }
 
     @Transactional
     public Book update(Long id, Book book){
         try {
-            Book book_updated = bookRepository.findById(id)
+            Book book_updated = repository.findById(id)
                     .orElseThrow(() -> new RuntimeException("Livro com id: "+id+" não encontrado!"));
 
-            if(book.getBook_title() != null && !book.getBook_title().trim().isEmpty()){
+            if(book.getBook_title() != null && !book.getBook_title().trim().isBlank()){
                 book_updated.setBook_title(book.getBook_title().trim());
             }
             if(book.getBook_rating() != null && (book.getBook_rating() >= 5 || book.getBook_rating() >= 0)){
@@ -65,7 +65,10 @@ public class BookService {
             if(book_updated.getBook_date_published() != null && !book.getBook_date_published().isAfter(LocalDate.now())){
                 book_updated.setBook_date_published(book.getBook_date_published());
             }
-            return bookRepository.save(book_updated);
+            if(book_updated.getBook_description() != null && !book_updated.getBook_description().trim().isBlank()){
+                book_updated.setBook_description(book.getBook_description().trim());
+            }
+            return repository.save(book_updated);
         } catch (RuntimeException e) {
             throw new RuntimeException(e.getMessage());
         }
@@ -73,11 +76,11 @@ public class BookService {
 
     public void delete_by_id(Long id){
         try {
-            Book delete_book = bookRepository.findById(id)
+            Book delete_book = repository.findById(id)
                             .orElseThrow(() -> new RuntimeException("Livro com id: "+id+" não encontrado!"));
-            bookRepository.delete(delete_book);
+            repository.delete(delete_book);
         } catch (RuntimeException e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException(e.getMessage());
         }
     }
 }
